# MG_Task_1

./: .gitignore  Bitmap.cpp  CMakeLists.txt  Makefile  README.txt  base_classes.h  base_functions.h  camera.cpp  camera.h  doc.txt  light.h  loader.cpp  loader.h  main.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  primitives.cpp  primitives.h  refr_info.h  rgb.h  texture.h  vector_functions.cpp  vector_functions.h
objects/: Cube.mtl  planeAssembly.mtl  rmdos.py  sphere.obj.dos  sphere.obj.lp  sphere_blue.mtl  sphere_blue.obj.dos  sphere_blue.obj.lp  sphere_green.mtl  sphere_green.obj.dos  sphere_green.obj.lp  test.mtl
